# dataprocessor

./: CMakeLists.txt  aggregators.cpp  aggregators.h  array.h  builders.h  bytebuffer.cpp  bytebuffer.h  column.cpp  column.h  comparator.cpp  comparator.h  groupby.h  main.cpp  operators.cpp  operators.h  reader.h  schema.h  table.h  types.h  value.cpp  value.h  writer.h
